# InvenTree

./: pyproject.toml
