[project]
name = "Inventree"
version = "0.16.4"

dependencies = [
    # Please keep this list sorted - if you pin a version provide a reason
    "Django<5.0",                              # Django package
    "coreapi",                                 # API documentation for djangorestframework
    "cryptography>=40.0.0,!=40.0.2",           # Core cryptographic functionality
    "django-allauth[openid,saml]",             # SSO for external providers via OpenID
    "django-allauth-2fa",                      # MFA / 2FA
    "django-cleanup",                          # Automated deletion of old / unused uploaded files
    "django-cors-headers",                     # CORS headers extension for DRF
    "django-crispy-forms<2.0",                 # Form helpers # FIXED 2023-02-18 due to required updates in the new version
    "django-dbbackup",                         # Backup / restore of database and media files
    "django-error-report-2",                   # Error report viewer for the admin interface
    "django-filter",                           # Extended filtering options
    "django-flags",                            # Feature flags
    "django-formtools",                        # Form wizard tools
    "django-ical",                             # iCal export for calendar views
    "django-import-export<4.0",                # Data import / export for admin interface  # FIXED 2024-06-26 see https://github.com/inventree/InvenTree/pull/7521
    "django-maintenance-mode",                 # Shut down application while reloading etc.
    "django-markdownify",                      # Markdown rendering
    "django-mptt",                             # Modified Preorder Tree Traversal
    "django-markdownify",                      # Markdown rendering
    "django-money>=3.0.0,<3.3.0",              # Django app for currency management # FIXED 2023-10-31 3.3.0 breaks due to https://github.com/django-money/django-money/issues/731
    "django-mptt",                             # Modified Preorder Tree Traversal
    "django-redis>=5.0.0",                     # Redis integration
    "django-q2",                               # Background task scheduling
    "django-q-sentry",                         # sentry.io integration for django-q
    "django-sesame",                           # Magic link authentication
    "django-sql-utils",                        # Advanced query annotation / aggregation
    "django-sslserver",                        # Secure HTTP development server
    "django-stdimage",                         # Advanced ImageField management
    "django-taggit",                           # Tagging support
    "django-user-sessions",                    # user sessions in DB
    "django-weasyprint",                       # django weasyprint integration
    "djangorestframework<3.15",                # DRF framework  # FIXED 2024-06-26 see https://github.com/inventree/InvenTree/pull/7521
    "djangorestframework-simplejwt[crypto]",   # JWT authentication
    "django-xforwardedfor-middleware",         # IP forwarding metadata
    "dj-rest-auth",                            # Authentication API endpoints
    "dulwich",                                 # pure Python git integration
    "drf-spectacular",                         # DRF API documentation
    "feedparser",                              # RSS newsfeed parser
    "gunicorn",                                # Gunicorn web server
    "pdf2image",                               # PDF to image conversion
    "pillow",                                  # Image manipulation
    "pint",                                    # Unit conversion
    "pip-licenses",                            # License information for installed packages
    "python-barcode[images]",                  # Barcode generator
    "python-dotenv",                           # Environment variable management
    "pyyaml>=6.0.1",                           # YAML parsing
    "qrcode[pil]",                             # QR code generator
    "rapidfuzz",                               # Fuzzy string matching
    "regex",                                   # Advanced regular expressions
    "sentry-sdk",                              # Error reporting (optional)
    "setuptools",                              # Standard dependency
    "tablib[xls,xlsx,yaml]",                   # Support for XLS and XLSX formats
    "weasyprint",                              # PDF generation
    "whitenoise",                              # Enhanced static file serving

    # OpenTelemetry dependencies
    "grpcio",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-redis",

    # pinned sub-deps",
    "pydyf==0.10.0"  # Fixed 2024-08-22 see https://github.com/inventree/InvenTree/pull/7961/files
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "test.py",
    "tests",
    "venv",
    "env",
    ".venv",
    ".env",
    "src/backend/plugins/*",
]
src = ["src/backend/InvenTree"]
# line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.lint]
select = ["A", "B", "C", "C4", "D", "F", "I", "N", "SIM", "PIE", "PLE", "PLW", "RUF", "UP", "W"]
# Things that should be enabled in the future:
# - LOG
# - DJ # for Django stuff
# - S # for security stuff (bandit)

ignore = [
    "PLE1205",
    # - PLE1205 - Too many arguments for logging format string
    "PLW2901",
    # - PLW2901 - Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PLW0602","PLW0603","PLW0604",  # global variable things
    "RUF015",
    # - RUF015 - Prefer next({iterable}) over single element slice
    "RUF012",
    # - RUF012 - Mutable class attributes should be annotated with typing.ClassVar
    "SIM117",
    # - SIM117 - Use a single with statement with multiple contexts instead of nested with statements
    "SIM102",
    # - SIM102 - Use a single if statement instead of nested if statements
    "SIM105",
    # - SIM105 - Use contextlib.suppress({exception}) instead of try-except-pass
    "C901",
    # - C901 - function is too complex
    "N999",
    # - N802 - function name should be lowercase
	"N802",
	# - N806 - variable should be lowercase
	"N806",
	# - N812 - lowercase imported as non-lowercase
	"N812",
    # - D417 Missing argument descriptions in the docstring
    "D417",
    # - RUF032 - decimal-from-float-literal
    "RUF032",

    # TODO These should be followed up and fixed
    # - B904 Within an `except` clause, raise exceptions
    "B904",

    # Remove fast
    "A002", "B018"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = false
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.uv.pip]
python-version = "3.9"
no-strip-extras=true
generate-hashes=true

[tool.coverage.run]
source = ["src/backend/InvenTree", "InvenTree"]

[tool.djlint]
ignore = "D018,H006,H008,H020,H021,H023,H025,H030,H031,T002"

[tool.isort]
src_paths=["src/backend/InvenTree", ]
skip_glob ="*/migrations/*.py"
known_django="django"
sections=["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.codespell]
ignore-words-list = ["assertIn","SME","intoto"]
